Fixed CSS alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,25 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(255, 195, 145);
 }
+
 /*main  */
 .wrapper{
+    justify-content: center;
     display: grid;
-    padding: 2px;
-    border: solid 2px;
-    border-color: rgb(111, 96, 89) ;
-    width: 150px;
-    height: 100px;
+    padding: 20px;
+    
+   
 }
 
 /*main ul  */
 .ul{
-    align-items:self;
+    display: grid;
     list-style-type: none;
+    padding: 20px;
+    border: solid 5px;
+    justify-items: center;
+    border-color: rgb(111, 96, 89);
+    width: 200px;
+    height: 100px;
+   
 }
